# settlement-level-electrification-optimization-benin

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  run_model.py
benin_least_cost/: __init__.py  demand.py  lcoe.py  parameters.py  schema.py
examples/: programmatic_usage.py
notebooks/: benin_electrification_walkthrough.ipynb  electrification_analysis.ipynb
tests/: test_logic.py
