[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "benin-least-cost-electrification"
version = "1.0.0"
description = "Settlement-level least-cost electrification model for Benin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BadibossPy"}
]
keywords = ["electrification", "energy-access", "LCOE", "mini-grid", "solar", "benin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "geopandas>=0.12.0",
    "shapely>=1.8.0",
    "pyproj>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
benin-electrification = "run_model:main"

[project.urls]
Repository = "https://github.com/BadibossPy/settlement-level-electrification-optimization-benin"

[tool.setuptools.packages.find]
where = ["."]
include = ["benin_least_cost*"]

